Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html, body {
 
 header {
   position: fixed;
-  width: 99%;
+  width: 100%;
   height: 100px;
 
   display: flex;
@@ -326,10 +326,8 @@ header {
 
   .toggle-menu {
       display: block;
-      position: fixed;
-      top: 22px;
-      right: 2vw;
-      z-index: 9999;
+      margin-top: 20px;
+      margin-left: 90px;
   }
 
   .upper-section h1 {
